force-app/main/default/objects/Email_Message_Case_Status__mdt/Email_Message_Case_Status__mdt.object-meta.xml
<CustomObject>
    <description>When an email message record's status is changed to a value (such as when it is set to "Sent"), what status should the corresponding case's status be set to?</description>
    <label>Email Message Case Status</label>
    <pluralLabel>Email Message Case Statuses</pluralLabel>
</CustomObject>