force-app/main/default/objects/Email_Message_Case_Status__mdt/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <description>Rule applies to only the case record type specified here.  This should be the record type's "Record Type Name".</description>
    <inlineHelpText>Rule applies to only the case record type specified here.  This should be the record type's "Record Type Name".</inlineHelpText>
    <label>Case Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>