force-app/main/default/objects/Email_Message_Case_Status__mdt/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>When this rule applies, what status should the case be set to?</description>
    <inlineHelpText>When this rule applies, what status should the case be set to?</inlineHelpText>
    <label>Case Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>