force-app/main/default/objects/Email_Message_Case_Status__mdt/fields/Email_Message_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Status__c</fullName>
    <description>When the email message's status is changed to this, then this rule applies.</description>
    <inlineHelpText>When the email message's status is changed to this, then this rule applies.</inlineHelpText>
    <label>Email Message Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>