force-app/main/default/objects/Email_Message_Case_Status__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this rule enabled or not?</description>
    <inlineHelpText>Is this rule enabled or not?</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>